@@ -1,3 +1,6 @@
+- properly fill new window with black (2023/09/05 MS)
+- show viewport size if used on non-16:9 monitors (2023/09/05 MS)
+
 1.1.3:
 - fixed broken hiscores file check for disabled installation (2023/04/29 MS)
 - updated config.guess (2023/04/29 MS)
